YACC.output
Terminals which are not used

   QUOTE
   WORD
   FILENAME


Grammar

    0 $accept: commands $end

    1 commands: /* empty */
    2         | commands command

    3 command: server_start

    4 @1: /* empty */

    5 server_start: SERVER @1 server_content

    6 server_content: OBRACE server_statements EBRACE

    7 server_statements: /* empty */
    8                  | server_statements server_statement

    9 server_statement: root
   10                 | error_page
   11                 | location_block
   12                 | listen
   13                 | server_names
   14                 | client_max_body_size

   15 root: ROOT PATH SEMICOLON

   16 error_page: ERROR_PAGE error_num PATH SEMICOLON
   17           | ERROR_PAGE error_num EQUAL PATH SEMICOLON

   18 error_num: /* empty */
   19          | error_num NUMBER

   20 @2: /* empty */

   21 location_block: LOCATION PATH OBRACE @2 location_statements EBRACE

   22 location_statements: /* empty */
   23                    | location_statements location_statement

   24 location_statement: autoindex
   25                   | root
   26                   | limit_except
   27                   | error_page

   28 limit_except: LIMIT_EXCEPT what_to_except SEMICOLON

   29 what_to_except: /* empty */
   30               | what_to_except HTTP_METHOD

   31 autoindex: AUTOINDEX STATE SEMICOLON

   32 listen: LISTEN what_to_listen SEMICOLON

   33 what_to_listen: IP COLON NUMBER
   34               | IP
   35               | NUMBER

   36 server_names: SERVER_NAME server_name SEMICOLON

   37 server_name: /* empty */
   38            | server_name PATH

   39 client_max_body_size: CLIENT_MAX_BODY_SIZE NUMBER SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
QUOTE (258)
OBRACE (259) 6 21
EBRACE (260) 6 21
SEMICOLON (261) 15 16 17 28 31 32 36 39
COLON (262) 33
HTTP_METHOD (263) 30
NUMBER (264) 19 33 35 39
WORD (265)
STATE (266) 31
EQUAL (267) 17
SERVER (268) 5
LISTEN (269) 32
SERVER_NAME (270) 36
LOCATION (271) 21
ERROR_PAGE (272) 16 17
CLIENT_MAX_BODY_SIZE (273) 39
IP (274) 33 34
AUTOINDEX (275) 31
PATH (276) 15 16 17 21 38
ROOT (277) 15
LIMIT_EXCEPT (278) 28
FILENAME (279)


Nonterminals, with rules where they appear

$accept (25)
    on left: 0
commands (26)
    on left: 1 2, on right: 0 2
command (27)
    on left: 3, on right: 2
server_start (28)
    on left: 5, on right: 3
@1 (29)
    on left: 4, on right: 5
server_content (30)
    on left: 6, on right: 5
server_statements (31)
    on left: 7 8, on right: 6 8
server_statement (32)
    on left: 9 10 11 12 13 14, on right: 8
root (33)
    on left: 15, on right: 9 25
error_page (34)
    on left: 16 17, on right: 10 27
error_num (35)
    on left: 18 19, on right: 16 17 19
location_block (36)
    on left: 21, on right: 11
@2 (37)
    on left: 20, on right: 21
location_statements (38)
    on left: 22 23, on right: 21 23
location_statement (39)
    on left: 24 25 26 27, on right: 23
limit_except (40)
    on left: 28, on right: 26
what_to_except (41)
    on left: 29 30, on right: 28 30
autoindex (42)
    on left: 31, on right: 24
listen (43)
    on left: 32, on right: 12
what_to_listen (44)
    on left: 33 34 35, on right: 32
server_names (45)
    on left: 36, on right: 13
server_name (46)
    on left: 37 38, on right: 36 38
client_max_body_size (47)
    on left: 39, on right: 14


state 0

    0 $accept: . commands $end

    $default  reduce using rule 1 (commands)

    commands  go to state 1


state 1

    0 $accept: commands . $end
    2 commands: commands . command

    $end    shift, and go to state 2
    SERVER  shift, and go to state 3

    command       go to state 4
    server_start  go to state 5


state 2

    0 $accept: commands $end .

    $default  accept


state 3

    5 server_start: SERVER . @1 server_content

    $default  reduce using rule 4 (@1)

    @1  go to state 6


state 4

    2 commands: commands command .

    $default  reduce using rule 2 (commands)


state 5

    3 command: server_start .

    $default  reduce using rule 3 (command)


state 6

    5 server_start: SERVER @1 . server_content

    OBRACE  shift, and go to state 7

    server_content  go to state 8


state 7

    6 server_content: OBRACE . server_statements EBRACE

    $default  reduce using rule 7 (server_statements)

    server_statements  go to state 9


state 8

    5 server_start: SERVER @1 server_content .

    $default  reduce using rule 5 (server_start)


state 9

    6 server_content: OBRACE server_statements . EBRACE
    8 server_statements: server_statements . server_statement

    EBRACE                shift, and go to state 10
    LISTEN                shift, and go to state 11
    SERVER_NAME           shift, and go to state 12
    LOCATION              shift, and go to state 13
    ERROR_PAGE            shift, and go to state 14
    CLIENT_MAX_BODY_SIZE  shift, and go to state 15
    ROOT                  shift, and go to state 16

    server_statement      go to state 17
    root                  go to state 18
    error_page            go to state 19
    location_block        go to state 20
    listen                go to state 21
    server_names          go to state 22
    client_max_body_size  go to state 23


state 10

    6 server_content: OBRACE server_statements EBRACE .

    $default  reduce using rule 6 (server_content)


state 11

   32 listen: LISTEN . what_to_listen SEMICOLON

    NUMBER  shift, and go to state 24
    IP      shift, and go to state 25

    what_to_listen  go to state 26


state 12

   36 server_names: SERVER_NAME . server_name SEMICOLON

    $default  reduce using rule 37 (server_name)

    server_name  go to state 27


state 13

   21 location_block: LOCATION . PATH OBRACE @2 location_statements EBRACE

    PATH  shift, and go to state 28


state 14

   16 error_page: ERROR_PAGE . error_num PATH SEMICOLON
   17           | ERROR_PAGE . error_num EQUAL PATH SEMICOLON

    $default  reduce using rule 18 (error_num)

    error_num  go to state 29


state 15

   39 client_max_body_size: CLIENT_MAX_BODY_SIZE . NUMBER SEMICOLON

    NUMBER  shift, and go to state 30


state 16

   15 root: ROOT . PATH SEMICOLON

    PATH  shift, and go to state 31


state 17

    8 server_statements: server_statements server_statement .

    $default  reduce using rule 8 (server_statements)


state 18

    9 server_statement: root .

    $default  reduce using rule 9 (server_statement)


state 19

   10 server_statement: error_page .

    $default  reduce using rule 10 (server_statement)


state 20

   11 server_statement: location_block .

    $default  reduce using rule 11 (server_statement)


state 21

   12 server_statement: listen .

    $default  reduce using rule 12 (server_statement)


state 22

   13 server_statement: server_names .

    $default  reduce using rule 13 (server_statement)


state 23

   14 server_statement: client_max_body_size .

    $default  reduce using rule 14 (server_statement)


state 24

   35 what_to_listen: NUMBER .

    $default  reduce using rule 35 (what_to_listen)


state 25

   33 what_to_listen: IP . COLON NUMBER
   34               | IP .

    COLON  shift, and go to state 32

    $default  reduce using rule 34 (what_to_listen)


state 26

   32 listen: LISTEN what_to_listen . SEMICOLON

    SEMICOLON  shift, and go to state 33


state 27

   36 server_names: SERVER_NAME server_name . SEMICOLON
   38 server_name: server_name . PATH

    SEMICOLON  shift, and go to state 34
    PATH       shift, and go to state 35


state 28

   21 location_block: LOCATION PATH . OBRACE @2 location_statements EBRACE

    OBRACE  shift, and go to state 36


state 29

   16 error_page: ERROR_PAGE error_num . PATH SEMICOLON
   17           | ERROR_PAGE error_num . EQUAL PATH SEMICOLON
   19 error_num: error_num . NUMBER

    NUMBER  shift, and go to state 37
    EQUAL   shift, and go to state 38
    PATH    shift, and go to state 39


state 30

   39 client_max_body_size: CLIENT_MAX_BODY_SIZE NUMBER . SEMICOLON

    SEMICOLON  shift, and go to state 40


state 31

   15 root: ROOT PATH . SEMICOLON

    SEMICOLON  shift, and go to state 41


state 32

   33 what_to_listen: IP COLON . NUMBER

    NUMBER  shift, and go to state 42


state 33

   32 listen: LISTEN what_to_listen SEMICOLON .

    $default  reduce using rule 32 (listen)


state 34

   36 server_names: SERVER_NAME server_name SEMICOLON .

    $default  reduce using rule 36 (server_names)


state 35

   38 server_name: server_name PATH .

    $default  reduce using rule 38 (server_name)


state 36

   21 location_block: LOCATION PATH OBRACE . @2 location_statements EBRACE

    $default  reduce using rule 20 (@2)

    @2  go to state 43


state 37

   19 error_num: error_num NUMBER .

    $default  reduce using rule 19 (error_num)


state 38

   17 error_page: ERROR_PAGE error_num EQUAL . PATH SEMICOLON

    PATH  shift, and go to state 44


state 39

   16 error_page: ERROR_PAGE error_num PATH . SEMICOLON

    SEMICOLON  shift, and go to state 45


state 40

   39 client_max_body_size: CLIENT_MAX_BODY_SIZE NUMBER SEMICOLON .

    $default  reduce using rule 39 (client_max_body_size)


state 41

   15 root: ROOT PATH SEMICOLON .

    $default  reduce using rule 15 (root)


state 42

   33 what_to_listen: IP COLON NUMBER .

    $default  reduce using rule 33 (what_to_listen)


state 43

   21 location_block: LOCATION PATH OBRACE @2 . location_statements EBRACE

    $default  reduce using rule 22 (location_statements)

    location_statements  go to state 46


state 44

   17 error_page: ERROR_PAGE error_num EQUAL PATH . SEMICOLON

    SEMICOLON  shift, and go to state 47


state 45

   16 error_page: ERROR_PAGE error_num PATH SEMICOLON .

    $default  reduce using rule 16 (error_page)


state 46

   21 location_block: LOCATION PATH OBRACE @2 location_statements . EBRACE
   23 location_statements: location_statements . location_statement

    EBRACE        shift, and go to state 48
    ERROR_PAGE    shift, and go to state 14
    AUTOINDEX     shift, and go to state 49
    ROOT          shift, and go to state 16
    LIMIT_EXCEPT  shift, and go to state 50

    root                go to state 51
    error_page          go to state 52
    location_statement  go to state 53
    limit_except        go to state 54
    autoindex           go to state 55


state 47

   17 error_page: ERROR_PAGE error_num EQUAL PATH SEMICOLON .

    $default  reduce using rule 17 (error_page)


state 48

   21 location_block: LOCATION PATH OBRACE @2 location_statements EBRACE .

    $default  reduce using rule 21 (location_block)


state 49

   31 autoindex: AUTOINDEX . STATE SEMICOLON

    STATE  shift, and go to state 56


state 50

   28 limit_except: LIMIT_EXCEPT . what_to_except SEMICOLON

    $default  reduce using rule 29 (what_to_except)

    what_to_except  go to state 57


state 51

   25 location_statement: root .

    $default  reduce using rule 25 (location_statement)


state 52

   27 location_statement: error_page .

    $default  reduce using rule 27 (location_statement)


state 53

   23 location_statements: location_statements location_statement .

    $default  reduce using rule 23 (location_statements)


state 54

   26 location_statement: limit_except .

    $default  reduce using rule 26 (location_statement)


state 55

   24 location_statement: autoindex .

    $default  reduce using rule 24 (location_statement)


state 56

   31 autoindex: AUTOINDEX STATE . SEMICOLON

    SEMICOLON  shift, and go to state 58


state 57

   28 limit_except: LIMIT_EXCEPT what_to_except . SEMICOLON
   30 what_to_except: what_to_except . HTTP_METHOD

    SEMICOLON    shift, and go to state 59
    HTTP_METHOD  shift, and go to state 60


state 58

   31 autoindex: AUTOINDEX STATE SEMICOLON .

    $default  reduce using rule 31 (autoindex)


state 59

   28 limit_except: LIMIT_EXCEPT what_to_except SEMICOLON .

    $default  reduce using rule 28 (limit_except)


state 60

   30 what_to_except: what_to_except HTTP_METHOD .

    $default  reduce using rule 30 (what_to_except)
